k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hk-retail-nft-platform
  labels:
    name: hk-retail-nft-platform
